--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,44 @@
 <p id="notice"><%= notice %></p>
 
-<h2><%="#{@name} Requests" %></h2>
-<% @requested_posts.each do |topic| %>
-  <%= link_to "#{topic.name}", topic_path %><br>
-<% end %>
+<div class="page-header"><h1><%="#{@name} Posts & Requests"%></h1></div>
 
-<h2><%="#{@name} Posts in Progress" %></h2>
-<% if @claimed_posts %>
-  <% @claimed_posts.each do |post| %>
-    <%= link_to "#{post.topic.name}", topic_path(post.topic.id) %><br>
-  <% end %>
-<% end %>
+<div class="panel panel-danger">
+  <div class="panel-heading">
+    <h3 class="panel-title"><%="#{@name} Requests" %></h3>
+  </div>
+  <div class="panel-body">
+    <% if @requested_posts %>
+      <% @requested_posts.each do |topic| %>
+        <%= link_to "#{topic.name}", topic_path %><br>
+      <% end %>
+    <% end %>
+  </div>
+</div>
 
-<h2><%="#{@name} Completed Posts" %></h2>
-<% if @completed_posts %>
-  <% @completed_posts.each do |post| %>
-    <%= link_to "#{post.topic.name}", topic_path(post.topic.id) %><br>
-  <% end %>
-<% end %>
+<div class="panel panel-warning">
+  <div class="panel-heading">
+    <h3 class="panel-title"><%="#{@name} Posts in Progress" %></h3>
+  </div>
+  <div class="panel-body">
+    <% if @claimed_posts %>
+      <% @completed_posts.each do |post| %>
+        <%= link_to "#{post.topic.name}", topic_path(post.topic.id) %><br>
+      <% end %>
+    <% end %>
+  </div>
+</div>
+
+<div class="panel panel-success">
+  <div class="panel-heading">
+    <h3 class="panel-title"><%="#{@name} Completed Posts" %></h3>
+  </div>
+  <div class="panel-body">
+    <% if @completed_posts %>
+      <% @completed_posts.each do |post| %>
+        <%= link_to "#{post.topic.name}", topic_path(post.topic.id) %><br>
+      <% end %>
+    <% end %>
+  </div>
+</div>
 
 <%= link_to 'Back to All Topics', root_path %>
