--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Thanks for finishing your post!</h1>
+<div class="page-header"><h1>Thanks for finishing your post!</h1></div>
 <%= render 'form' %>
 
 <%= link_to 'Show', @post.topic %> |
