--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-
 <div class="row">
   <div class="page-header">
-    <h1>All Topics</h1>
+    <h2>All Topics</h2>
   </div>
 </div>
 
@@ -15,8 +13,8 @@
       <th>Role</th>
       <th>Date requested</th>
       <th>Status</th>
-      <th></th>
-      <th></th>
+      <th>Edit</th>
+      <th>Delete</th>
     </tr>
   </thead>
 
@@ -27,39 +25,33 @@
         <td><%= link_to topic.requester.name, topic.requester %></td>
         <td><%= topic.requester.role %></td>
         <td><%= topic.created_at.to_date.strftime('%B %d, %Y') %></td>
-        
         <% if topic.status == "requested" %>
-          <td><span class="label label-danger">No one is writing about this yet.</span></td>
+          <td><span class='label label-danger'>No one is writing about this yet.</span></td>
         <% elsif topic.status == "pending" %>
           <% if logged_in? && topic.writer.id == current_user.id %>
-            <td><span class="label label-warning"><%= "You are working on this!" %></span></td>
+            <td><span class='label label-warning'>You are working on this!</span></td>
           <% else %>
-            <td><span class="label label-warning"><%= "#{topic.writer.name} is working on this!" %></span></td>
+            <td><span class='label label-warning'><%= topic.writer.name %> is working on this!</span></td>
           <% end %>
         <% elsif topic.status == "completed" %>
           <% if logged_in? && topic.writer.id == current_user.id %>
-            <td><span class="label label-success"><%= "You wrote this!"%></span></td>
+            <td><span class='label label-success'>You wrote this!</span></td>
           <% else %>
-            <td><span class="label label-success"><%= "#{topic.writer.name} wrote this!" %></span></td>
+            <td><span class='label label-success'><%= topic.writer.name %> wrote this!</span></td>
           <% end %>
         <% end %>
-
         <% if logged_in? && topic.requester.id == current_user.id %>
           <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
           <td><%= link_to 'Delete', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% else %>
+          <td> </td>
+          <td> </td>
         <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 </div>
-
-
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <ul class="nav navbar-nav">
-    <% if logged_in? %>
-      <li><%= link_to 'Request a new topic!', new_topic_path %></li>
-      <li><%= link_to 'See all your requests & posts', user_path(current_user) %></li>
-    <% end %>
-  </ul>
+<div class="row">
+  <%= render 'layouts/index_buttons' %>
 </div>
