--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -21,11 +21,10 @@ pre {
 a {
   color: #000;
   &:visited {
-    color: #666;
+    color: #000;
   }
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: #000;
   }
 }
 
@@ -36,7 +35,7 @@ div {
 }
 
 #notice {
-  color: green;
+  color: black;
 }
 
 .field_with_errors {
