--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,7 +1,5 @@
-<h1>New Topic</h1>
-
+<div class="page-header"><h2>New Topic</h2></div>
 <%= render 'form' %>
-
 <div class="row">
 <%= link_to 'Back', topics_path %>
 </div>
